--- a/css/demo.css
+++ b/css/demo.css
@@ -106,6 +106,14 @@
 }
 
 .color-4 {
+	display: inline-block;
+	float: right;
+	margin-right: 20px;
+}
+
+.color-41 {
+	display: inline-block;
+	text-align: center;
 	
 }
 
