fixing up ui and ux when logged into app

--- a/css/component.css
+++ b/css/component.css
@@ -300,6 +300,7 @@ nav a:focus {
 /* Effect 8: border slight translate */
 .cl-effect-8 a {
 	padding: 10px 20px;
+  text-decoration: none;
 }
 
 .cl-effect-8 a::before,
