--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   font-weight: 400;
 	font-size: 1em;
   color: #333;
-  background: url('file:///Users/michellemarin/iron-yard/mytop7/styleguide/home.jpg') no-repeat center center fixed;
+  background: #333;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -123,7 +123,7 @@ li {
 }
 
 .bg-cover {
-  background: rgba(220, 204, 168, 0.9);
+  background: #333;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -153,18 +153,11 @@ a:hover {
 
 
 .thing-container {
-  margin: 20px auto 0 auto;
-  width: 95%;
-  font-size: 14px;
-  font-weight: 200;
-  line-height: 20px;
-  border-radius: 6px;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.8);
-  background: rgba(255, 255, 255, 0.8);
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  background: white;
   color: #222;
-  text-align: center;
-  display: inline-block;
 }
 
 .thing-container li {
