--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,13 @@ h1, h2, h3 {
 p {
     font-size: 16px;
     text-align: center;
-    line-height: 1.5;
+
   }
 
-
+#test {
+  font-size: 18px;
+  line-height: 2.5em;
+}
 
 .logo {
   width: 115px;
@@ -50,7 +53,7 @@ article {
   margin: 0 auto;
   width: 100%;
   font-size: 14px;
-  font-weight: 200;
+
   padding: 0;
   color: #222;
   text-align: center;
@@ -80,7 +83,7 @@ li {
 }
 
 .navbar-default.main-nav {
-  background: rgba(59, 98, 164, 0.7);
+  background: rgba(59, 98, 164, 0.9);
   border: none !important;
 }
 
