styling the need help info at the bottom of the vote page

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,14 @@ li {
   clear: both;
 }
 
+.clearfix li {
+  display: block;
+}
+
+.clearfix h4 {
+  font-weight: 700;
+}
+
 
 #test {
   font-size: 16px;
