--- a/css/style.css
+++ b/css/style.css
@@ -84,12 +84,12 @@ header {
 #homepage {
   color: #354856;
   text-align: left;
-  background: url('../styleguide/home.jpg') no-repeat bottom center fixed;
+  background: url('../styleguide/home.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  margin-top: 0;
+  margin: 0;
   padding: 0;
 }
 
