--- a/css/component.css
+++ b/css/component.css
@@ -342,6 +342,52 @@ nav a:focus {
 	transform: translateY(0px) translateX(0px);
 }
 
+/* Effect 89: second text and borders */
+
+.cl-effect-89 a {
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.cl-effect-89 a::before,
+.cl-effect-89 a::after  {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 3px solid #73C8A9;
+  content: '';
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.3s;
+  transition: transform 0.3s, opacity 0.3s;
+}
+
+.cl-effect-89 a::after  {
+  border-color: #fff;
+  opacity: 0;
+  -webkit-transform: translateY(-7px) translateX(6px);
+  -moz-transform: translateY(-7px) translateX(6px);
+  transform: translateY(-7px) translateX(6px);
+}
+
+.cl-effect-89 a:hover::before,
+.cl-effect-89 a:focus::before {
+  opacity: 0;
+  -webkit-transform: translateY(5px) translateX(-5px);
+  -moz-transform: translateY(5px) translateX(-5px);
+  transform: translateY(5px) translateX(-5px);
+}
+
+.cl-effect-89 a:hover::after,
+.cl-effect-89 a:focus::after  {
+  opacity: 1;
+  -webkit-transform: translateY(0px) translateX(0px);
+  -moz-transform: translateY(0px) translateX(0px);
+  transform: translateY(0px) translateX(0px);
+  color: #73C8A9;
+}
+
 /* Effect 9: second text and borders */
 .cl-effect-9 a {
 	margin: 0 20px;
