--- a/css/component.css
+++ b/css/component.css
@@ -18,11 +18,13 @@ nav a {
 	font-weight: 400;
 	text-shadow: 0 0 1px rgba(255,255,255,0.3);
 	font-size: 1em;
+  text-decoration: none;
 }
 
 nav a:hover,
 nav a:focus {
 	outline: none;
+  text-decoration: none;
 }
 
 /* Effect 1: Brackets */
@@ -302,6 +304,14 @@ nav a:focus {
 .cl-effect-8 a {
 	padding: 10px 20px;
   text-decoration: none;
+  font-size: 14px;
+}
+
+nav.cl-effect-8 a:hover,
+nav.cl-effect-8 a:focus {
+  outline: none;
+  text-decoration: none;
+  color: #354856;
 }
 
 .cl-effect-8 a::before,
@@ -311,19 +321,21 @@ nav a:focus {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	border: 3px solid #354856;
+	border: 3px solid #fff;
 	content: '';
 	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
 	-moz-transition: -moz-transform 0.3s, opacity 0.3s;
 	transition: transform 0.3s, opacity 0.3s;
+  text-decoration: none;
 }
 
 .cl-effect-8 a::after  {
-	border-color: #fff;
+	border-color: #354856;
 	opacity: 0;
 	-webkit-transform: translateY(-7px) translateX(6px);
 	-moz-transform: translateY(-7px) translateX(6px);
 	transform: translateY(-7px) translateX(6px);
+  text-decoration: none;
 }
 
 .cl-effect-8 a:hover::before,
@@ -332,6 +344,7 @@ nav a:focus {
 	-webkit-transform: translateY(5px) translateX(-5px);
 	-moz-transform: translateY(5px) translateX(-5px);
 	transform: translateY(5px) translateX(-5px);
+  text-decoration: none;
 }
 
 .cl-effect-8 a:hover::after,
@@ -340,6 +353,7 @@ nav a:focus {
 	-webkit-transform: translateY(0px) translateX(0px);
 	-moz-transform: translateY(0px) translateX(0px);
 	transform: translateY(0px) translateX(0px);
+  text-decoration: none;
 }
 
 /* Effect 89: second text and borders */
@@ -347,6 +361,7 @@ nav a:focus {
 .cl-effect-89 a {
   padding: 10px 20px;
   text-decoration: none;
+  font-size: 16px;
 }
 
 .cl-effect-89 a::before,
@@ -363,8 +378,17 @@ nav a:focus {
   transition: transform 0.3s, opacity 0.3s;
 }
 
+
+nav.cl-effect-89 a:hover,
+nav.cl-effect-89 a:focus {
+  outline: none;
+  text-decoration: none;
+  color: #73C8A9;
+}
+
 .cl-effect-89 a::after  {
   border-color: #fff;
+  color: #73C8A9;
   opacity: 0;
   -webkit-transform: translateY(-7px) translateX(6px);
   -moz-transform: translateY(-7px) translateX(6px);
@@ -377,6 +401,7 @@ nav a:focus {
   -webkit-transform: translateY(5px) translateX(-5px);
   -moz-transform: translateY(5px) translateX(-5px);
   transform: translateY(5px) translateX(-5px);
+  color: #73C8A9;
 }
 
 .cl-effect-89 a:hover::after,
