--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,10 @@ button.navbar-toggle.custom-menu:focus {
 @media only screen
 and (max-device-width : 480px) {
 
-  #homepage img {
-    display: none !important;
+  .spacer {
+    height: 50px;
+    padding: 0;
+    margin: 0;
   }
+
 }
