--- a/css/component.css
+++ b/css/component.css
@@ -356,12 +356,75 @@ nav.cl-effect-8 a:focus {
   text-decoration: none;
 }
 
+/* Effect 88: border slight translate */
+.cl-effect-88 a {
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 14px;
+  color: #354856;
+}
+
+nav.cl-effect-88 a:hover,
+nav.cl-effect-88 a:focus {
+  outline: none;
+  text-decoration: none;
+  color: #73C8A9;
+}
+
+.cl-effect-88 a::before,
+.cl-effect-88 a::after  {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 3px solid #354856;
+  content: '';
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.3s;
+  transition: transform 0.3s, opacity 0.3s;
+  text-decoration: none;
+}
+
+.cl-effect-88 a::after  {
+  color: #73C8A9;
+  border-color: #73C8A9;
+  opacity: 0;
+  -webkit-transform: translateY(-7px) translateX(6px);
+  -moz-transform: translateY(-7px) translateX(6px);
+  transform: translateY(-7px) translateX(6px);
+  text-decoration: none;
+}
+
+.cl-effect-88 a:hover::before,
+.cl-effect-88 a:focus::before {
+  opacity: 0;
+  -webkit-transform: translateY(5px) translateX(-5px);
+  -moz-transform: translateY(5px) translateX(-5px);
+  transform: translateY(5px) translateX(-5px);
+  text-decoration: none;
+}
+
+.cl-effect-88 a:hover::after,
+.cl-effect-88 a:focus::after  {
+  opacity: 1;
+  -webkit-transform: translateY(0px) translateX(0px);
+  -moz-transform: translateY(0px) translateX(0px);
+  transform: translateY(0px) translateX(0px);
+  text-decoration: none;
+}
+
+
 /* Effect 89: second text and borders */
 
 .cl-effect-89 a {
   padding: 10px 20px;
   text-decoration: none;
   font-size: 16px;
+}
+
+.nav.cl-effect-89 li {
+  color: #fff;
 }
 
 .cl-effect-89 a::before,
