--- a/css/style.css
+++ b/css/style.css
@@ -109,10 +109,12 @@ header {
 .resources {
   width: 100%;
   margin-top: 25px;
+  margin-left: 40px;
 }
 
 .resources li {
   display: block;
+
 }
 
 
