fixed the delete button and adjusted the link colors and ui

--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,10 @@ button.navbar-toggle.custom-menu:focus {
   padding-bottom: 0;
 }
 
+.center {
+  text-align: center;
+}
+
 .spacer {
   height: 100px;
   padding: 0;
