--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,14 @@ header {
   font-weight: 800;
 }
 
+#homeback {
+  background: rgba(0, 0, 17, 0.5);
+  padding-left: 1.4em;
+  padding-top: 0.5em;
+  padding-bottom: 1em;
+  padding-right: 0em;
+}
+
 #home-text {
   margin-top: 4em;
   font-size: 16px;
